--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,3 +61,20 @@ a {
   width: 350px; 
   height: auto; 
 }
+
+@layer components {
+  .rounded-25 {
+    border-radius: 25%;
+  }
+  .box-content {
+    box-sizing: content-box;
+  }
+  @keyframes scroll {
+    0% { opacity: 0; }
+    10% { transform: translateY(0); opacity: 1; }
+    100% { transform: translateY(15px); opacity: 0;}
+  }
+  .animate-scroll {
+    animation: scroll 2.2s cubic-bezier(.15,.41,.69,.94) infinite;
+  }
+}
