--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,11 @@ a {
   height: auto; 
 }
 
+.image-size2 {
+  width: 10rem; 
+  height: auto; 
+}
+
 @layer components {
   .rounded-25 {
     border-radius: 25%;
