--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,3 +121,13 @@ a {
   opacity: 1;
   transform: translateY(0);
 }
+
+
+@keyframes fadeIn {
+  0%, 40% {  
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
