--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,16 +3,11 @@
 @tailwind utilities;
 
 
-html {
-  @apply scroll-smooth;
-}
 
 
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -196,4 +191,22 @@ font-weight: bold;
 .show-after-5s {
   animation: fadeIn 1.5s forwards 3.5s;
   opacity: 0;
+}
+
+ .textCustom {
+  padding-bottom: 10rem;
+  font-weight: 600;
+  font-style: normal;
+  padding-left: 10.5rem;
+  padding-right: 10.5rem;
+  font-size: 2.75rem;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+  line-height: 3.75rem;
+ }
+
+ .inlineSvg {
+  display: inline;
+  vertical-align: middle;  
+  margin-left: 0.5rem;     
+  margin-right: 0.5rem; 
 }
